# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "graph"
version = "0.1.0"
authors = ["Antonín Horkel"]
edition = "2024"
# description = ""
readme = "README.md"
repository = "https://github.com/AntoninHorkel/graph"
license = "MIT OR Apache-2.0"
# keywords = []
categories = ["graphics", "rendering"] # https://crates.io/category_slugs
exclude = ["target/", "result/"]

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
# codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = true
codegen-units = 1 # This supposedly enables more optimizations.
rpath = false

[dependencies]
crossterm = "0.29.0"
image = "0.25.6"
pollster = "0.4.0"
ratatui = "0.29.0"
ratatui-image = "8.0.1"
thiserror = "2.0.12"
tracy-client = "=0.18.0" # For Tracy v0.11.1 (https://github.com/nagisa/rust_tracy_client#version-support-table)
wgpu = { version = "26.0.1", default-features = false, features = ["metal", "vulkan", "webgl", "webgpu", "wgsl"] }

# TODO
# [dev-dependencies]
# tracy-client = "0.18.2"

# https://doc.rust-lang.org/rustc/lints/listing/index.html
# TODO: More lints
[lints.rust]
deprecated-safe = "deny"
future-incompatible = "deny"
keyword-idents = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
unsafe_code = "deny"
# unused = "warn"
warnings = "warn"

# https://rust-lang.github.io/rust-clippy/stable/index.html
[lints.clippy]
# TODO: Add all common metadata
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "warn" # expect
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cognitive_complexity = "warn"
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "warn" # expect
cast_possible_wrap = "warn" # expect
cast_precision_loss = "warn" # expect
cast_sign_loss = "warn" # expect
match_wildcard_for_single_variants = "allow"
similar-names = "warn" # expect
struct-excessive-bools = "warn" # expect
too_many_lines = "warn"
perf = { level = "deny", priority = -1 }
# TODO: Add more restrictions
restriction = { level = "allow", priority = -1 }
absolute_paths = "warn"
print_stderr = "warn"
print_stdout = "warn"
unwrap_used = "warn"
style = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
